# decond

./: .gitignore  CMakeLists.txt  README  README.md  bump.sh  calCesaroDC.m  calCesaroEC.m  calCorr-allAtOnce.m  calCorr-separately.m  calCorr.m  calCorr_d.m  calCorr_fast.m  calDC.m  calNoAverageCesaroDC.m  calNoAverageCesaroEC-sd.m  calNoAverageCesaroEC.m  calPartialCesaroDC.m  calPartialCesaroEC.m  calculateCorr.m  calculateDC.m  calculateEC.m  convertData.m  convertVelData.m  spatialDecompose.m  xcorr_tu.m
archive/: fitNDCesaro.py  get_num_rBins.py  plotCorr.py
backup/: analyze.sh  average-sdCorr.m  average-vCorr.m  plotNoAverageCesaro-fit-ave.m  plotNoAverageCesaro-fitting.m  plotSD.m  plotSDNoAverageCesaro-fit-ave.m  plotSDNoAverageCesaro-fit-ave2.m  plotSDNoAverageCesaro-fit.m
deprecated/: calCorr-separately.m  calDC.m  calculateEC.m
fortran/: Makefile  Makefile.gfortran  Makefile.ifort  Makefile.pgi
gmx2matlab/: readGmx2Matlab_d.m  trr2matlab_d.m  trr2matlab_tu.m
octave/: average-Cesaro.m  average-corr.m  average-sdCorr.m  calCesaroDC.m  calCorr.m  calNoAverageCesaro-ND.m  calNoAverageCesaro-sdD.m  calNoAverageCesaroEC-sd.m  fitAveNoAverageCesaro-ND.m  fitAveNoAverageCesaro-sd.m  fitAveNoAverageCesaro-sdD.m  plotNoAverageCesaro-fit-ave.m  plotNoAverageCesaro-fitting.m  plotNoAverageCesaro.m  plotting.m  rBin-sdCorr.m
python/: analyzer_test.py  averageCorr.py  averageSdCorr.py  calCesaro.py  calNDCesaro.py  calSdDCesaro.py  combineEngtraj.py  danalyze.py  dec  dec.py  do_tests.py  fitCesaro.py  fitNDCesaro.py  fitSdDCesaro.py  plot-gDsig-NaCl.py  (+10 more)
(+132 files in other folders)
